2004-10-21 20:30  dwilkins42

	* ChangeLog, src/hugin/po/POTFILES.in, src/hugin/po/de.po,
	  src/hugin/po/fr.po, src/hugin/po/hugin.pot, src/hugin/po/it.po,
	  src/hugin/po/pl.po, src/hugin/xrc/Makefile.am: Add preferences
	  dialog to build system

2004-10-21 19:42  dangelo

	* src/Panorama/Panorama.cpp: fixed optimisation flags for linked
	  variables. also print one v line per image

2004-10-21 02:22  dangelo

	* src/: hugin/CPEditorPanel.cpp, hugin/CPImageCtrl.cpp,
	  hugin/ImageCache.cpp, hugin/MainFrame.cpp, hugin/Makefile.am,
	  hugin/NonaStitcherPanel.cpp, hugin/PreferencesDialog.cpp,
	  hugin/huginApp.cpp, hugin/xrc/main_menu.xrc,
	  hugin/xrc/pref_dialog.xrc, include/hugin/MainFrame.h,
	  include/hugin/PreferencesDialog.h,
	  include/hugin/config_defaults.h: added Preferences screen.
	  Unfortunately hugin crashes on exit now. dunno why.  Seems to be
	  related to loading the Preferences dialog from the XRC file

2004-10-21 02:19  dangelo

	* src/: Panorama/Panorama.cpp, Panorama/PanoramaMemento.cpp,
	  common/utils.cpp, hugin/AutoCtrlPointCreator.cpp,
	  include/panoinc_WX.h, include/PT/Panorama.h: use more robust
	  number parsing routine. should accept , and . in autopano now.
	  some more code cleanup

2004-10-21 00:31  dangelo

	* m4/ax_check_wx_gtk.m4: extended regular expressions needed for ?

2004-10-21 00:20  dangelo

	* m4/ax_check_wx_gtk.m4: Also detect the debug builds of gtk. Not
	  sure if it works for gtk2

2004-10-20 10:56  dwilkins42

	* src/hugin/po/fr.po: Update french translation. Thanks to Jean-Luc
	  Coulon

2004-10-20 10:22  dwilkins42

	* configure.ac, src/hugin/Makefile.am, src/nona_gui/Makefile.am:
	  Add win32 support in the build system

2004-10-20 08:35  dwilkins42

	* src/hugin/: po/de.po, po/fr.po, po/hugin.pot, po/it.po, po/pl.po,
	  xrc/data/.cvsignore, xrc/data/Makefile.am: Update translation
	  files. Make sure data files are copied/linked once only

2004-10-20 07:50  dwilkins42
